--- a/src/index.html
+++ b/src/index.html
@@ -95,8 +95,8 @@
        
         <figure>
           <picture>
-            <source media="(max-width:576px)" srcset="./assets/images/1.gig-mobile.jpg" loading="lazy">
-            <img src="./assets/images/1.gig.jpg" alt="GIG" loading="lazy">
+            <source media="(max-width:576px)" srcset="./assets/images/gradient.jpg" loading="lazy">
+            <img src="./assets/images/gradient.jpg" alt="GIG" loading="lazy">
           </picture>
           <picture>
             <source media="(max-width:576px)" srcset="./assets/images/2.feelfactory-mobile.jpg" loading="lazy">
