--- a/src/index.html
+++ b/src/index.html
@@ -378,7 +378,7 @@
               <p>feb. 2020 - <spam class="date">may. 2020</spam><spam class="date">(4 meses)</spam>
               </p>
             </div>
-            <ul>
+            <ul class="last-ul">
               <li>Diseñadora gráfica y desarrolladora web front-end</li>
               <li>Ayco Internet (Vigo, Pontevedra)</li>
               <li>Jornada completa - Contrato de prácticas</li>
@@ -427,7 +427,7 @@
             <div>
               <p>2014 - 2016</p>
             </div>
-            <ul>
+            <ul class="last-ul">
               <li>Bachillerato de Artes Plásticas, Imagen y Diseño</li>
               <li>IES Politécnico de Vigo (Pontevedra)</li>
             </ul>
@@ -472,7 +472,7 @@
             <div>
               <p>Desarrollo web<br></p>
             </div>
-            <div class="icon-skill" >
+            <div class="icon-skill last-ul">
               <img  src="./assets/images/html.png">
               <img  src="./assets/images/css.png">
               <img  src="./assets/images/sass.png">
@@ -515,7 +515,7 @@
             <div>
               <p>Inglés<br></p>
             </div>
-            <ul class="english">
+            <ul class="english last-ul">
               <li>Nivel intermedio hablado y escrito (B2)</li>
               <li>Santander Scholarships Language | English to Boost your Career - University of Pennsylvania</li>
             </ul>
