--- a/src/index.html
+++ b/src/index.html
@@ -472,12 +472,29 @@
             <div>
               <p>Desarrollo web<br></p>
             </div>
-            <div class="icon-skill last-ul">
+            <div class="icon-skill last-ul icon-skill-2">
               <img  src="./assets/images/html.png">
               <img  src="./assets/images/css.png">
               <img  src="./assets/images/sass.png">
               <img  src="./assets/images/javascript.png">
               <img  src="./assets/images/git.png">
+              <img  src="./assets/images/github.png">
+              <img  src="./assets/images/webflow.png">
+              <img  src="./assets/images/wordpress.png">
+
+            </div>
+            <div class="icon-skill last-ul icon-skill-3 icon-skill-36">
+              <img  src="./assets/images/html.png">
+              <img  src="./assets/images/css.png">
+              <img  src="./assets/images/sass.png">
+              <img  src="./assets/images/javascript.png">
+              <img  src="./assets/images/git.png">
+
+       
+
+            </div>
+            <div class="icon-skill last-ul icon-skill-3">
+   
               <img  src="./assets/images/github.png">
               <img  src="./assets/images/webflow.png">
               <img  src="./assets/images/wordpress.png">
