--- a/src/index.html
+++ b/src/index.html
@@ -95,12 +95,12 @@
        
         <figure>
           <picture>
-            <source media="(max-width:576px)" srcset="./assets/images/gradient.jpg" loading="lazy">
-            <img src="./assets/images/gradient.jpg" alt="GIG" loading="lazy">
+            <source media="(max-width:576px)" srcset="./assets/images/webatarashi.jpg" loading="lazy">
+            <img src="./assets/images/webatarashi.jpg" alt="GIG" loading="lazy">
           </picture>
           <picture>
-            <source media="(max-width:576px)" srcset="./assets/images/2.feelfactory-mobile.jpg" loading="lazy">
-            <img src="./assets/images/2.feelfactory.gif" alt="Feel Factory" loading="lazy">
+            <source media="(max-width:576px)" srcset="./assets/images/1.gig.jpg" loading="lazy">
+            <img src="./assets/images/1.gig.jpg" alt="Feel Factory" loading="lazy">
           </picture>
           <picture>
             <source media="(max-width:576px)" srcset="./assets/images/3.domsum-mobile.jpg" loading="lazy">
