--- a/src/index.html
+++ b/src/index.html
@@ -562,7 +562,7 @@
         </section>
 
         <section class="form-fields container">
-          <form id="form" class="form" data-aos="fade-up" data-aos-duration="1000">
+          <form id="form" class="form" data-aos="fade-up" data-aos-duration="1000" netlify>
             <div class="form-control">
               <input type="text" id="username" style="border-top: 1px solid white;" placeholder="Nombre" />
               <small>Error message</small>
