--- a/src/index.html
+++ b/src/index.html
@@ -562,7 +562,7 @@
         </section>
 
         <section class="form-fields container">
-          <form id="form" class="form" data-aos="fade-up" data-aos-duration="1000" netlify>
+          <form id="form" class="form" data-aos="fade-up" data-aos-duration="1000" netlify method="post">
             <div class="form-control">
               <input type="text" id="username" style="border-top: 1px solid white;" placeholder="Nombre" />
               <small>Error message</small>
@@ -583,7 +583,7 @@
               <textarea type="text" id="message" placeholder="Escribe un mensaje"></textarea>
               <small class="small-message">Error message</small>
             </div>
-            <button type="submit">ENVIAR<i class="fas fa-angle-right" style="scale: 1.4;padding-left: 1.7rem;"></i>
+            <button type="submit" value="send">ENVIAR<i class="fas fa-angle-right" style="scale: 1.4;padding-left: 1.7rem;"></i>
             </button>
           </form>
         </section>
