--- a/src/domsum.html
+++ b/src/domsum.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <link rel="stylesheet" type="text/css" href="./assets/styles/gig.scss">
+    <link rel="stylesheet" type="text/css" href="./assets/styles/atarashii.scss">
     <link id="favicon" rel="shortcut icon" href="./assets/images/logo.ico" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -131,7 +131,25 @@
         <section class="recomendations-recipe">
           <h1>Descubre más proyectos<spam> de diseño gráfico y web</spam></h1>
           <div class="container-recomendations">
-            <a href="#">
+
+            <a href="atarashii.html">
+              <div class="recomendations-object">
+                <picture>
+                  <source media="(max-width:576px)" srcset="./assets/images/desktop.jpg">
+                  <img src="./assets/images/desktop.jpg" alt="Flowers">
+                </picture>
+              </div>
+            </a>
+            <a href="gig.html">
+              <div class="recomendations-object">
+                <picture>
+                  <source media="(max-width:576px)" srcset="./assets/images/1.gig.jpg">
+                  <img src="./assets/images/1.gig.jpg" alt="Flowers">
+                </picture>
+              </div>
+            </a>
+
+            <a href="maow.html">
               <div class="recomendations-object">
                 <picture>
                   <source media="(max-width:576px)" srcset="./assets/images/5.maow-movil2.jpg">
@@ -139,27 +157,44 @@
                 </picture>
               </div>
             </a>
-            <a href="#">
+           
+            <a href="postal.html">
               <div class="recomendations-object">
                 <picture>
-                  <source media="(max-width:576px)" srcset="./assets/images/2.feelfactory-movil2.jpg">
-                  <img src="./assets/images/2.feelfactory.jpg" alt="Flowers">
+                  <source media="(max-width:576px)" srcset="./assets/images/postal-carro.jpg">
+                  <img src="./assets/images/postal-carro.jpg" alt="Flowers">
                 </picture>
               </div>
             </a>
-            <a href="#">
+            <a href="domsum.html">
               <div class="recomendations-object">
                 <picture>
-                  <source media="(max-width:576px)" srcset="./assets/images/3.domsum-movil2.jpg">
-                  <img src="./assets/images/3.domsum.jpg" alt="Flowers">
+                  <source media="(max-width:576px)" srcset="./assets/images/desktop-2.jpg">
+                  <img src="./assets/images/desktop-2.jpg" alt="Flowers">
                 </picture>
               </div>
             </a>
-            <a href="#">
+            <a href="feelfactory.html">
               <div class="recomendations-object">
                 <picture>
-                  <source media="(max-width:576px)" srcset="./assets/images/4.radicaleslibres-movil2.jpg">
-                  <img src="./assets/images/4.radicaleslibres.jpg" alt="Flowers">
+                  <source media="(max-width:576px)" srcset="./assets/images/10.feelfactory.jpg">
+                  <img src="./assets/images/10.feelfactory.jpg" alt="Flowers">
+                </picture>
+              </div>
+            </a>
+            <a href="flux.html">
+              <div class="recomendations-object">
+                <picture>
+                  <source media="(max-width:576px)" srcset="./assets/images/flux.gif">
+                  <img src="./assets/images/flux.gif" alt="Flowers">
+                </picture>
+              </div>
+            </a>
+            <a href="radicaleslibres.html">
+              <div class="recomendations-object">
+                <picture>
+                  <source media="(max-width:576px)" srcset="./assets/images/4.11.radicaleslibres-2.jpg">
+                  <img src="./assets/images/4.11.radicaleslibres-2.jpg" alt="Flowers">
                 </picture>
               </div>
             </a>
