--- a/src/index.html
+++ b/src/index.html
@@ -66,7 +66,7 @@
     <nav>
       <a href="#index">
         <div>
-          <h2>anaisfernandez</h2>
+          <h2>anaísfernández</h2>
         </div>
       </a>
       <ul>
@@ -95,28 +95,40 @@
        
         <figure>
           <picture>
-            <source media="(max-width:576px)" srcset="./assets/images/webatarashi.jpg" loading="lazy">
-            <img src="./assets/images/webatarashi.jpg" alt="GIG" loading="lazy">
+            <source media="(max-width:576px)" srcset="./assets/images/desktop-movil.jpg" loading="lazy">
+            <img src="./assets/images/desktop.jpg" alt="GIG" loading="lazy">
           </picture>
           <picture>
-            <source media="(max-width:576px)" srcset="./assets/images/1.gig.jpg" loading="lazy">
+            <source media="(max-width:576px)" srcset="./assets/images/gig-movil.jpg" loading="lazy">
             <img src="./assets/images/1.gig.jpg" alt="Feel Factory" loading="lazy">
           </picture>
           <picture>
-            <source media="(max-width:576px)" srcset="./assets/images/3.domsum-mobile.jpg" loading="lazy">
-            <img src="./assets/images/3.domsum.jpg" alt="Dom Sum" loading="lazy">
+            <source media="(max-width:576px)" srcset="./assets/images/maow-movil.jpg" loading="lazy">
+            <img src="./assets/images/5.maow.jpg" alt="Dom Sum" loading="lazy">
           </picture>
           <picture>
-            <source media="(max-width:576px)" srcset="./assets/images/4.radicaleslibres-mobile.jpg" loading="lazy">
-            <img src="./assets/images/4.radicaleslibres.jpg" alt="Radicales Libres" loading="lazy">
+            <source media="(max-width:576px)" srcset="./assets/images/postal-movil.jpg" loading="lazy">
+            <img src="./assets/images/postal-carro.jpg" alt="Radicales Libres" loading="lazy">
           </picture>
           <picture>
-            <source media="(max-width:576px)" srcset="./assets/images/5.maow-mobile.jpg" loading="lazy">
+            <source media="(max-width:576px)" srcset="./assets/images/maow-movil.jpg" loading="lazy">
             <img src="./assets/images/5.maow.jpg" alt="Maow" loading="lazy">
           </picture>
           <picture>
-            <source media="(max-width:576px)" srcset="./assets/images/6.processing-mobile.gif" loading="lazy">
-            <img src="./assets/images/6.processing.gif" alt="Generative art" loading="lazy">
+            <source media="(max-width:576px)" srcset="./assets/images/desktop-2-movil.jpg" loading="lazy">
+            <img src="./assets/images/desktop-2.jpg" alt="Generative art" loading="lazy">
+          </picture>
+          <picture>
+            <source media="(max-width:576px)" srcset="./assets/images/feelfactory-movil.jpg" loading="lazy">
+            <img src="./assets/images/10.feelfactory.jpg" alt="Generative art" loading="lazy">
+          </picture>
+          <picture>
+            <source media="(max-width:576px)" srcset="./assets/images/flux-movil.jpg" loading="lazy">
+            <img src="./assets/images/flux.gif" alt="Generative art" loading="lazy">
+          </picture>
+          <picture>
+            <source media="(max-width:576px)" srcset="./assets/images/radicales-movil.jpg" loading="lazy">
+            <img src="./assets/images/4.11.radicaleslibres-2.jpg" alt="Generative art" loading="lazy">
           </picture>
         </figure>
       </section>
