--- a/src/postal.html
+++ b/src/postal.html
@@ -91,7 +91,7 @@
       <div>
         <h1>POS TAL CUAL</h1>
         <h3>Diseño postal (concurso de postales) – 2022</h3>
-        <p><b>Pos Tal Cual</b> es un concurso de postales creado en Enero de 2021 por la Facultad de Bellas Artes de Pontevedra. Las postales que resultaren ganadoras formarán parte de una exposición que tendrá lugar en <b>Rumore Lounge Pub</b>, un restaurante situado en Pontevedra.
+        <p><b>Pos Tal Cual</b> es un concurso de postales creado en Enero de 2022 por la Facultad de Bellas Artes de Pontevedra. Las postales que resultaron ganadoras formaron parte de una exposición que tuvo lugar en <b>Rumore Lounge Pub</b>, un restaurante situado en Pontevedra.
         </p>
         <p>He presentado dos propuestas, y como la temática y la técnica eran totalmente libres, me he decantado por el uso del collage y fotomontaje.</p>
         <div class="program">
@@ -113,7 +113,25 @@
         <section class="recomendations-recipe">
           <h1>Descubre más proyectos<spam> de diseño gráfico y web</spam></h1>
           <div class="container-recomendations">
-            <a href="#">
+
+            <a href="atarashii.html">
+              <div class="recomendations-object">
+                <picture>
+                  <source media="(max-width:576px)" srcset="./assets/images/desktop.jpg">
+                  <img src="./assets/images/desktop.jpg" alt="Flowers">
+                </picture>
+              </div>
+            </a>
+            <a href="gig.html">
+              <div class="recomendations-object">
+                <picture>
+                  <source media="(max-width:576px)" srcset="./assets/images/1.gig.jpg">
+                  <img src="./assets/images/1.gig.jpg" alt="Flowers">
+                </picture>
+              </div>
+            </a>
+
+            <a href="maow.html">
               <div class="recomendations-object">
                 <picture>
                   <source media="(max-width:576px)" srcset="./assets/images/5.maow-movil2.jpg">
@@ -121,27 +139,44 @@
                 </picture>
               </div>
             </a>
-            <a href="#">
+           
+            <a href="postal.html">
               <div class="recomendations-object">
                 <picture>
-                  <source media="(max-width:576px)" srcset="./assets/images/2.feelfactory-movil2.jpg">
-                  <img src="./assets/images/2.feelfactory.jpg" alt="Flowers">
+                  <source media="(max-width:576px)" srcset="./assets/images/postal-carro.jpg">
+                  <img src="./assets/images/postal-carro.jpg" alt="Flowers">
                 </picture>
               </div>
             </a>
-            <a href="#">
+            <a href="domsum.html">
               <div class="recomendations-object">
                 <picture>
-                  <source media="(max-width:576px)" srcset="./assets/images/3.domsum-movil2.jpg">
-                  <img src="./assets/images/3.domsum.jpg" alt="Flowers">
+                  <source media="(max-width:576px)" srcset="./assets/images/desktop-2.jpg">
+                  <img src="./assets/images/desktop-2.jpg" alt="Flowers">
                 </picture>
               </div>
             </a>
-            <a href="#">
+            <a href="feelfactory.html">
               <div class="recomendations-object">
                 <picture>
-                  <source media="(max-width:576px)" srcset="./assets/images/4.radicaleslibres-movil2.jpg">
-                  <img src="./assets/images/4.radicaleslibres.jpg" alt="Flowers">
+                  <source media="(max-width:576px)" srcset="./assets/images/10.feelfactory.jpg">
+                  <img src="./assets/images/10.feelfactory.jpg" alt="Flowers">
+                </picture>
+              </div>
+            </a>
+            <a href="flux.html">
+              <div class="recomendations-object">
+                <picture>
+                  <source media="(max-width:576px)" srcset="./assets/images/flux.gif">
+                  <img src="./assets/images/flux.gif" alt="Flowers">
+                </picture>
+              </div>
+            </a>
+            <a href="radicaleslibres.html">
+              <div class="recomendations-object">
+                <picture>
+                  <source media="(max-width:576px)" srcset="./assets/images/4.11.radicaleslibres-2.jpg">
+                  <img src="./assets/images/4.11.radicaleslibres-2.jpg" alt="Flowers">
                 </picture>
               </div>
             </a>
