--- a/src/index.html
+++ b/src/index.html
@@ -199,10 +199,10 @@
           <section class="card" data-aos="fade-up" data-aos-duration="1000">
             <a href="atarashii.html">
 
-            <img class="rotation" src="./assets/images/logo-2.png" alt="Radicales Libres" loading="lazy">
-            <div class="card-header">
-              <img src="./assets/images/webatarashi.jpg" alt="Radicales Libres" loading="lazy">
-            </div>
+          <div class="card-header">
+            <video src="./assets/images/webatarashi.mp4" style="width:100%;height:auto; " autoplay  loop></video>
+          </div>
+           
             <div class="card-body">
               <h1>ATARASHII GAKKO </h1>
               <h3>Diseño y desarrollo web front-end</h3>
@@ -213,9 +213,9 @@
 
           <section class="card" data-aos="fade-up" data-aos-duration="1000">
             <a href="gig.html">
-            <div class="card-header">
-              <img src="./assets/images/1.gig.jpg" alt="GIG" loading="lazy">
-            </div>
+              <div class="card-header">
+                <img src="./assets/images/1.gig.jpg" alt="Radicales Libres" loading="lazy">
+              </div>
             <div class="card-body">
               <h1>GIG </h1>
               <h3>Diseño de app móvil</h3>
@@ -574,25 +574,25 @@
         </section>
 
         <section class="form-fields container">
-          <form id="form" class="form" data-aos="fade-up" data-aos-duration="1000" netlify method="post">
+          <form id="form" class="form" data-aos="fade-up" data-aos-duration="1000" method="POST" data-netlify="true" name="contact">
             <div class="form-control">
-              <input type="text" id="username" style="border-top: 1px solid white;" placeholder="Nombre" />
+              <input type="text" id="username" name="username" style="border-top: 1px solid white;" placeholder="Nombre" />
               <small>Error message</small>
             </div>
             <div class="form-control">
-              <input type="text" id="email" placeholder="Email" />
+              <input type="text" name="email" id="email" placeholder="Email" />
               <small>Error message</small>
             </div>
             <div class="form-control">
-              <input type="text" id="phone" placeholder="Teléfono" />
+              <input type="text" name="phone" id="phone" placeholder="Teléfono" />
               <small>Error message</small>
             </div>
             <div class="form-control">
-              <input type="text" id="matter2" placeholder="Asunto" />
+              <input type="text" name="matter2" id="matter2" placeholder="Asunto" />
               <small>Error message</small>
             </div>
             <div class="form-control">
-              <textarea type="text" id="message" placeholder="Escribe un mensaje"></textarea>
+              <textarea type="text"  name="message" id="message" placeholder="Escribe un mensaje"></textarea>
               <small class="small-message">Error message</small>
             </div>
             <button type="submit" value="send">ENVIAR<i class="fas fa-angle-right" style="scale: 1.4;padding-left: 1.7rem;"></i>
@@ -609,7 +609,7 @@
         <h1>Puedes seguirme en mis redes sociales</h1>
         <div class="social-media">
           <a href="https://www.linkedin.com/in/ana%C3%ADs-fern%C3%A1ndez-774872158/">Linkedin</a>
-          <a href="https://www.behance.net/anaisfernandezvillar">Behance</a>
+          <a href="https://www.behance.net/anaísfernándezvillar">Behance</a>
         </div>
       </div>
     </article>
@@ -628,7 +628,7 @@
       </section>
       <section class="footer-logo">
         <a href="#index">
-          <h2 class="prueba">anaisfernandez</h2>
+          <h2 class="prueba">anaísfernández</h2>
         </a>
       </section>
     </article>
