--- a/src/feelfactory.html
+++ b/src/feelfactory.html
@@ -11,7 +11,7 @@
     <link
       href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
       rel="stylesheet">
-    <title>Anaís Fernández | Diseño & desarrollo web</title>
+    <title>Anaís Fernández | Feel Factory</title>
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
   </head>
@@ -65,7 +65,7 @@
     <nav>
       <a href="index.html">
         <div>
-          <h2>anaisfernandez</h2>
+          <h2>anaísfernández</h2>
         </div>
       </a>
       <ul>
@@ -186,14 +186,7 @@
                 </picture>
               </div>
             </a>
-            <a href="feelfactory.html">
-              <div class="recomendations-object">
-                <picture>
-                  <source media="(max-width:576px)" srcset="./assets/images/10.feelfactory.jpg">
-                  <img src="./assets/images/10.feelfactory.jpg" alt="Flowers">
-                </picture>
-              </div>
-            </a>
+           
             <a href="flux.html">
               <div class="recomendations-object">
                 <picture>
@@ -226,7 +219,7 @@
       </section>
       <section class="footer-logo">
         <a href="#index">
-          <h2 class="prueba">anaisfernandez</h2>
+          <h2 class="prueba">anaísfernández</h2>
         </a>
       </section>
     </article>
