--- a/src/postal.html
+++ b/src/postal.html
@@ -11,7 +11,7 @@
     <link
       href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
       rel="stylesheet">
-    <title>Anaís Fernández | Diseño & desarrollo web</title>
+    <title>Anaís Fernández | Pos Tal Cual</title>
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
   </head>
@@ -65,7 +65,7 @@
     <nav>
       <a href="index.html">
         <div>
-          <h2>anaisfernandez</h2>
+          <h2>anaísfernández</h2>
         </div>
       </a>
       <ul>
@@ -91,9 +91,9 @@
       <div>
         <h1>POS TAL CUAL</h1>
         <h3>Diseño postal (concurso de postales) – 2022</h3>
-        <p><b>Pos Tal Cual</b> es un concurso de postales creado en Enero de 2022 por la Facultad de Bellas Artes de Pontevedra. Las postales que resultaron ganadoras formaron parte de una exposición que tuvo lugar en <b>Rumore Lounge Pub</b>, un restaurante situado en Pontevedra.
+        <p><b>Pos Tal Cual</b> es un concurso de postales creado la Facultad de Bellas Artes de Pontevedra en Enero de 2022. La temática y la técnica eran totalmente libres y las ganadoras recibirían como premio el formar parte de una exposición en Rumore Lounge Pub, un restaurante situado en Pontevedra. 
         </p>
-        <p>He presentado dos propuestas, y como la temática y la técnica eran totalmente libres, me he decantado por el uso del collage y fotomontaje.</p>
+        <p>En mi caso, he presentado las siguientes candidaturas:</p>
         <div class="program">
 
           <img src="./assets/images/photoshop.png">
@@ -140,14 +140,7 @@
               </div>
             </a>
            
-            <a href="postal.html">
-              <div class="recomendations-object">
-                <picture>
-                  <source media="(max-width:576px)" srcset="./assets/images/postal-carro.jpg">
-                  <img src="./assets/images/postal-carro.jpg" alt="Flowers">
-                </picture>
-              </div>
-            </a>
+         
             <a href="domsum.html">
               <div class="recomendations-object">
                 <picture>
@@ -196,7 +189,7 @@
       </section>
       <section class="footer-logo">
         <a href="#index">
-          <h2 class="prueba">anaisfernandez</h2>
+          <h2 class="prueba">anaísfernández</h2>
         </a>
       </section>
     </article>
