--- a/src/gracias.html
+++ b/src/gracias.html
@@ -5,7 +5,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>Atarashii Gakkou no Leaders | Recibimos tu mensaje</title>
+  <title>Anaís Fernández | Gracias</title>
   <script src="/node_modules/bootstrap/dist/js/bootstrap.min.js" type="module"></script>
   <link rel="stylesheet" type="text/css" href="./assets/styles/main.scss">
 
