--- a/src/index.html
+++ b/src/index.html
@@ -602,7 +602,7 @@
 
 
 
-          <form id="form" class="form" name="atarashii-form" data-aos="fade-up" data-aos-duration="1000" netlify action="gracias">
+          <form id="form" class="form" name="atarashii-form" data-aos="fade-up" data-aos-duration="1000" netlify action="gracias.html">
             <div class="form-control">
               <input type="text" id="username" name="nombre" style="border-top: 1px solid white;" placeholder="Nombre" />
               <small>Error message</small>
