--- a/src/index.html
+++ b/src/index.html
@@ -73,6 +73,8 @@
         <li><a href="#projects">Proyectos </a></li>
         <li><a href="#about-me">Sobre mí</a></li>
         <li><a href="#contact">Contacto</a></li>
+        <li style="display:none;"><a href="gracias.html">Contacto</a></li>
+        <li style="display:none;"><a href="404.html">error</a></li>
 
       </ul>
       <button class="menu-ham" type="button">
