--- a/src/gracias.html
+++ b/src/gracias.html
@@ -14,7 +14,7 @@
 
 <body>
     <!-- header -->
-    <header data-aos="fade-down" data-aos-duration="1000">
+    <header data-aos="fade-down" data-aos-duration="1000" style="z-index:400vh;">
       <article class="swiper-slide">
         <div class="swiper-slide-text">
           <span>DISEÑO GRÁFICO</span>
@@ -60,15 +60,15 @@
         </div>
       </article>
       <nav>
-        <a href="#index">
+        <a href="index.html">
           <div>
             <h2>anaísfernández</h2>
           </div>
         </a>
         <ul>
-          <li><a href="#projects">Proyectos </a></li>
-          <li><a href="#about-me">Sobre mí</a></li>
-          <li><a href="#contact">Contacto</a></li>
+          <li><a href="index.html#projects">Proyectos </a></li>
+          <li><a href="index.html#about-me">Sobre mí</a></li>
+          <li><a href="index.html#contact">Contacto</a></li>
   
         </ul>
         <button class="menu-ham" type="button">
