--- a/src/404.html
+++ b/src/404.html
@@ -60,15 +60,15 @@
         </div>
       </article>
       <nav>
-        <a href="#index">
+        <a href="index.html">
           <div>
             <h2>anaísfernández</h2>
           </div>
         </a>
         <ul>
-          <li><a href="#projects">Proyectos </a></li>
-          <li><a href="#about-me">Sobre mí</a></li>
-          <li><a href="#contact">Contacto</a></li>
+          <li><a href="index.html#projects">Proyectos </a></li>
+          <li><a href="index.html#about-me">Sobre mí</a></li>
+          <li><a href="index.html#contact">Contacto</a></li>
   
         </ul>
         <button class="menu-ham" type="button">
@@ -85,10 +85,10 @@
         <div class="modal-dialog modal-dialog-centered">
           <div class="modal-content">
             <div class="modal-header modal-text-center">
-              <img src="/src/assets/images/socialemoji.gif" style="width: 12rem; padding-bottom:1rem;  filter:invert();">
+              <img src="/src/assets/images/socialemoji-sad.gif" style="width: 12rem; padding-bottom:1rem;  ">
             </div>
             <div class="modal-header modal-text-center">
-              <p>Lo siento,<br>se ha producido un error</p>
+              <p>Lo siento mucho,<br>se ha producido un error en la página</p>
             </div>
             <div class="modal-header modal-text-center">
               <a href="index.html" class="btn btn-dark">Volver al inicio</a>
