--- a/src/gracias.html
+++ b/src/gracias.html
@@ -12,7 +12,7 @@
   <link rel="stylesheet" type="text/css" href="./assets/styles/gracias.scss">
 </head>
 
-<body>
+<body style="max-height:100vh;">
     <!-- header -->
     <header data-aos="fade-down" data-aos-duration="1000" style="z-index:400vh;">
       <article class="swiper-slide">
@@ -85,7 +85,7 @@
         <div class="modal-dialog modal-dialog-centered">
           <div class="modal-content">
             <div class="modal-header modal-text-center">
-              <img src="/src/assets/images/socialemoji.gif" style="width: 12rem; padding-bottom:1rem;  filter:invert();">
+              <img src="/src/assets/images/socialemoji.gif" style="width: 12rem; padding-bottom:1rem;  ">
             </div>
             <div class="modal-header modal-text-center">
               <p>Gracias por el mensaje,<br>en breves me pondré en contacto contigo</p>
