--- a/src/404.html
+++ b/src/404.html
@@ -103,7 +103,7 @@
 <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
 
   <!-- footer -->
-  <footer>
+  <footer style="position:absolute;bottom:0;">
     <article>
       <section>
         <ul>
