--- a/src/flux.html
+++ b/src/flux.html
@@ -111,7 +111,7 @@
 
 
           <div class="flex-item"><img src="./assets/images/2.flux.png" alt=""></div>
-          <div class="flex-item"><img src="./assets/images/3.flux.png" alt=""></div>
+          <div class="flex-item flex-item2"><img src="./assets/images/3.flux.png" alt=""></div>
           <div class="flex-item"><img src="./assets/images/5.flux.png" alt=""></div>
           <div class="flex-item"><img src="./assets/images/21.flux.png" alt=""></div>
 
