--- a/src/index.html
+++ b/src/index.html
@@ -640,7 +640,7 @@
         <h1>Puedes seguirme en mis redes sociales</h1>
         <div class="social-media">
           <a href="https://www.linkedin.com/in/ana%C3%ADs-fern%C3%A1ndez-774872158/">Linkedin</a>
-          <a href="https://www.behance.net/anaísfernándezvillar">Behance</a>
+          <a href="https://www.behance.net/anaisfernandezvillar">Behance</a>
         </div>
       </div>
     </article>
