--- a/src/radicaleslibres.html
+++ b/src/radicaleslibres.html
@@ -67,7 +67,7 @@
     <nav>
       <a href="index.html">
         <div>
-          <h2>anaisfernandez</h2>
+          <h2>anaísfernández</h2>
         </div>
       </a>
       <ul>
@@ -110,7 +110,7 @@
       <div>
         <div class="flex-container">
           <div class="flex-item flex-cartel"><img src="./assets/images/4.1.radicaleslibres.jpg" alt=""></div>
-          <div class="flex-item flex-cartel"><img src="./assets/images/4.2.radicaleslibres.jpg" alt=""></div>
+          <div class="flex-item flex-cartel flex-item2"><img src="./assets/images/4.2.radicaleslibres.jpg" alt=""></div>
 
           <div class="flex-item flex-instagram insta-1">
             <img src="./assets/images/4.3.radicaleslibres.jpg" alt="">
@@ -217,7 +217,7 @@
       </section>
       <section class="footer-logo">
         <a href="#index">
-          <h2 class="prueba">anaisfernandez</h2>
+          <h2 class="prueba">anaísfernández</h2>
         </a>
       </section>
     </article>
