--- a/src/feelfactory.html
+++ b/src/feelfactory.html
@@ -110,7 +110,7 @@
         <div class="flex-container">
 
           <div class="flex-item flex-cartel-2"><img src="./assets/images/2.1.feelfactory.jpg" alt=""></div>
-          <div class="flex-item flex-cartel-2"><img src="./assets/images/2.2.feelfactory.jpg" alt=""></div>
+          <div class="flex-item flex-cartel-2 flex-item3"><img src="./assets/images/2.2.feelfactory.jpg" alt=""></div>
           <div class="flex-item flex-cartel-2"><img src="./assets/images/2.3.feelfactory.jpg" alt=""></div>
           <div class="flex-item flex-cartel-2"><img src="./assets/images/2.4.feelfactory.jpg" alt=""></div>
           <div class="flex-item flex-icons">
